<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>femcum.modernfloydwood</groupId>
    <artifactId>floyd</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>nexus</id>
            <url>https://nexus.velocitypowered.com/repository/maven-public/</url>
        </repository>

        <repository>
            <id>glaremasters</id>
            <url>https://repo.glaremasters.me/repository/public/</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250517</version>
        </dependency>

        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>ViaVersion</artifactId>
            <version>5.3.0-downgraded</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/ViaVersion-5.3.0-downgraded.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>ViaBackwards</artifactId>
            <version>5.3.0-downgraded</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/ViaBackwards-5.3.0-downgraded.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>ViaRewind</artifactId>
            <version>4.0.6-downgraded</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/ViaRewind-4.0.6-downgraded.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.arikia</groupId>
            <artifactId>discord-rpc</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/discord-rpc.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>javax.vecmath</groupId>
            <artifactId>vecmath</artifactId>
            <version>1.5.2</version>
        </dependency>

        <dependency>
            <groupId>org.openjdk.nashorn</groupId>
            <artifactId>nashorn-core</artifactId>
            <version>15.7</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
        </dependency>

        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>netty</artifactId>
            <version>1.8.8</version>
        </dependency>

        <dependency>
            <groupId>oshi-project</groupId>
            <artifactId>oshi-core</artifactId>
            <version>1.1</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>3.4.0</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>platform</artifactId>
            <version>3.4.0</version>
        </dependency>

        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j-core-mojang</artifactId>
            <version>51.2</version>
        </dependency>

        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>4.6</version>
        </dependency>

        <dependency>
            <groupId>com.paulscode</groupId>
            <artifactId>codecjorbis</artifactId>
            <version>20101023</version>
        </dependency>

        <dependency>
            <groupId>com.paulscode</groupId>
            <artifactId>codecwav</artifactId>
            <version>20101023</version>
        </dependency>

        <dependency>
            <groupId>com.paulscode</groupId>
            <artifactId>libraryjavasound</artifactId>
            <version>20101123</version>
        </dependency>

        <dependency>
            <groupId>com.paulscode</groupId>
            <artifactId>librarylwjglopenal</artifactId>
            <version>20100824</version>
        </dependency>

        <dependency>
            <groupId>com.paulscode</groupId>
            <artifactId>soundsystem</artifactId>
            <version>20120107</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.0.23.Final</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>17.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.3.2</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>

        <dependency>
            <groupId>net.java.jinput</groupId>
            <artifactId>jinput</artifactId>
            <version>2.0.5</version>
        </dependency>

        <dependency>
            <groupId>net.java.jutils</groupId>
            <artifactId>jutils</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>

        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>1.5.21</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>realms</artifactId>
            <version>1.7.59</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.8.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.3.3</version>
        </dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.0-beta9</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.0-beta9</version>
        </dependency>

        <dependency>
            <groupId>tv.twitch</groupId>
            <artifactId>twitch</artifactId>
            <version>6.5</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>macos</id>
            <activation>
                <property>
                    <name>os.detected.name</name>
                    <value>osx</value>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.lwjgl.lwjgl</groupId>
                    <artifactId>lwjgl-platform</artifactId>
                    <version>2.9.4-nightly-20150209</version>
                    <classifier>natives-windows</classifier> <!-- or natives-linux -->
                </dependency>
                <dependency>
                    <groupId>org.lwjgl.lwjgl</groupId>
                    <artifactId>lwjgl-platform</artifactId>
                    <version>2.9.4-nightly-20150209</version>
                    <classifier>natives-windows</classifier> <!-- or natives-linux -->
                </dependency>
                <dependency>
                    <groupId>org.lwjgl.lwjgl</groupId>
                    <artifactId>lwjgl-platform</artifactId>
                    <version>2.9.4-nightly-20150209</version>
                    <classifier>natives-windows</classifier> <!-- or natives-linux -->
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>windows-linux</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.lwjgl.lwjgl</groupId>
                    <artifactId>lwjgl</artifactId>
                    <version>2.9.4-nightly-20150209</version>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl.lwjgl</groupId>
                    <artifactId>lwjgl_util</artifactId>
                    <version>2.9.4-nightly-20150209</version>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl.lwjgl</groupId>
                    <artifactId>lwjgl-platform</artifactId>
                    <version>2.9.4-nightly-20150209</version>
                    <type>pom</type>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>